dynamic header, table, modal, input fields, add button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>community connects</title>
+    <title>CC</title>
     <link href="" rel="stylesheet" />
     <link
       rel="stylesheet"
